# frontend

./: .gitignore  CMakeLists.txt  README.md  frontendConfig.cmake.in  makefile  test.sy  xmake.lua
flex_yacc/: sysy_flex.l  sysy_yacc.y
include/: AST.h  c_std_symbols.h  ir_gen.h  runtime_lib_def.h  symbol.h  symbol_table.h  utils.h
include/sy_parser/: AST.h  symbol_table.h
src/: AST.c  c_std_symbols.cpp  ir_gen.cpp  runtime_lib_def.cpp  runtime_lib_symbols.c  symbol_table.c  sysy_flex.l  sysy_yacc.y  utils.c
src/ir_gen_utils/: gen_array.cpp
src/sy_parser/: AST.c  symbol_table.c  utils.c
tests/: CMakeLists.txt  parser.cpp  parser_test.c  test.sy  xmake.lua
tests/cases/: array_func.out  array_func.sy  array_init.out  array_init.sy  array_init2.out  array_init2.sy  gep_test.out  gep_test.sy  nested_logical_exp.out  nested_logical_exp.sy  short_circuit_basic.out  short_circuit_basic.sy  short_circuit_complex.out  short_circuit_complex.sy  short_circuit_func.out  short_circuit_func.sy  simple.out
tests/test_cases/: basic.sy
